test/syc/good/cexprptrdiff.c
/*
 * Constant expression - pointer difference
 */

int r[10];
int dp = (r + 4) - (r + 2);
