test/syc/bad/subdiffarrptr.c
/*
 * Expression is not constant.
 */

int r[10];
int s[10];
int dp = (s + 4) - (r + 2);
